--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
         <a href="./project.html">Project</a>
     </nav>
     <div>
-        <img src="./rahman.jpg" alt="">
+        <img src="./th.jpeg" alt="">
         <h1>AR RAHMAN BIN MOHAMAD</h1>
         <P>I am going to be web developer</P>
         <p>Email : <a href="">rahman.bhss@gmail.com</a></p>
