--- a/skill.html
+++ b/skill.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -18,10 +19,16 @@
     <div>
         <h4>DEVELOPER SKILLS</h4>
         <ul>
-            <li>Excel : Excellent</li>
-            <li>Python : Excellent</li>
-            <li>AI and machine learning : Good</li>
-            <li>HTML : Good</li>
+            <li>Excel</li>
+            <li>Python</li>
+            <li>AI and machine learning</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Javascript</li>
+            <li>React</li>
+            <li>Bootstrap</li>
+            <li>Cloudfire</li>
+            <li>Git</li>
         </ul>
     </div>
     <div>
