--- a/experience.html
+++ b/experience.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <a href="./home.html">Home</a>
+        <a href="./index.html">Home</a>
         <a href="./experience.html">Experience</a>
         <a href="./skill.html">Skills</a>
         <a href="./education.html">Education</a>
