--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-    <nav>
-        <a href="./home.html">Home</a>
+    <nav class="saya">
+        <a href="./index.html">Home</a>
         <a href="./experience.html">Experience</a>
         <a href="./skill.html">Skills</a>
         <a href="./education.html">Education</a>
         <a href="./project.html">Project</a>
     </nav>
     <div>
-        <img src="./th.jpeg" alt="">
+        <img src="./th.jpeg" alt="" class="gambar">
         <h1>AR RAHMAN BIN MOHAMAD</h1>
         <P>I am going to be web developer</P>
         <p>Email : <a href="">rahman.bhss@gmail.com</a></p>
