--- a/project.html
+++ b/project.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <a href="./home.html">Home</a>
+        <a href="./index.html">Home</a>
         <a href="./experience.html">Experience</a>
         <a href="./skill.html">Skills</a>
         <a href="./education.html">Education</a>
@@ -17,10 +17,10 @@
     </nav>
     <h1>PROJECT</h1>
     <div>
-        <img src="./resume betul.png" alt="" width="300">
         <ul>
-            <li>Site Resume: <a href="https://ar-rahman97.github.io/resume1/">link</a></li>
-            <li>Python algorithem : <a href="https://github.com/ar-rahman97/kedai-makan-rahman2">link</a></li>
+            <li>Excel templet</li>
+            <li>Automation send email with SendGrid</li>
+            <li>Python algorithm : <a href="https://github.com/ar-rahman97/kedai-makan-rahman2">link</a></li>
             <li>Image classification megnesium (computer vision) deep learning algorithm : <a href="https://github.com/ar-rahman97/magnesium">link</a></li>
             <li>Stock market prediction : <a href="https://github.com/ar-rahman97/topglove_price_prediction">link</a></li>
         </ul>
